DA-BE-58: remove fomarter in mapper class and change name of function in WordListRepository